# BesturingsSystemen_II

./: .gitignore  LICENSE  README.md
Bash/: 1 - Beginning Bash.md  10 - Additional Features for Scripting.md  2 - Standard Output.md  4 - Executing Commands.md  5 - Basic Scripting Shell Variables.md  6 - Shell Logic and Arithmetic.md  7 - Intermediate Shell Tools I.md  8 - Intermediate Shell Tools II.md  9 - Finding Files find, locate, slocate.md  readme.md
Bash/Labo/: 10.sh  11.sh  1_1.sh  1_2.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  7_d.sh  7_ext.sh  8.sh  8_table_output.sh  9.sh
Labo1/: lspcin.c
Labo2/: 1.c  2.c  3.c  5.c  6.c  makefile  test.txt  watchfile.c
Labo220420/: mutex1.c
Labo3/: 1.c  2.c  3.1.c  3.2.c  makefile  writestring.c
Labo3/data/: watchfile.txt
Labo3/data/testfiles/: 1.txt  3.txt  4.txt
Labo3/src/: 1.c  2.c  3.1.c  watchfiled.cpp
Labo4/: 1.c  2.c  3_malloc.c  6.c  6_malloc.c  pipes.sh
Labo5/: 1.c  2.c  3.c  CMakeLists.txt
Syscalls/Deel V - IO-systeemaanroepen/: 4.c  5.c  watchfile.c
Syscalls/Deel VI - Processen en POSIX-threads/POSIX-threads/: 3_multi.c  4.c  CMakeLists.txt
Syscalls/Deel VI - Processen en POSIX-threads/Processen/: CMakeLists.txt
Syscalls/Deel VI - Processen en POSIX-threads/Processen/data/testfiles/: 2.txt  5.txt
Syscalls/Deel VI - Processen en POSIX-threads/Processen/src/: 3.2.c  watchfile.c  watchfiled_5.cpp  writestring.c
Syscalls/Deel VI - Processen en POSIX-threads/Thread Synchronisatie/: README.md  (+8 more)
Syscalls/Shared Memory/: 2.c  CMakeLists.txt  README.md  cat.c  child.c  cp1.c  cp2.c  cp3.c  ipc.c  pipe.c  pipe2.c  shm.c  shm_2d.c  tail.c
Theorie/: Les1.sh  Les2.sh  Les3.sh  PPT3a.md  PPT3b.md  PPT4.md  PPT6.md
(+7 files in other folders)
